# myro

./: .claude.local.md  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  justfile  kalimm_predictions.csv  myro-design.md  myro-feature-specs.md  myro-strategy.md  myro-wireframes.md  test-coach.py
.github/workflows/: release.yml
apps/teaser/: index.html
apps/web/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  prisma.config.ts
bench/: METHODOLOGY.md  REPORT.md  REPORT2.md
bench/results/: aggressive-cows-bad-check_Qwen3.5-35B-A3B-UD-Q3_K_XL.gguf.json  sliding-window-values-not-indices_Qwen3.5-35B-A3B-UD-Q3_K_XL.gguf.json  theatre-sq-bruteforce_Qwen3.5-35B-A3B-UD-Q3_K_XL.gguf.json  theatre-sq-correct_Qwen3.5-35B-A3B-UD-Q3_K_XL.gguf.json  theatre-sq-float_Qwen3.5-35B-A3B-UD-Q3_K_XL.gguf.json  xenia-wrong-parity_Qwen3.5-35B-A3B-UD-Q3_K_XL.gguf.json
bench/scenarios/: aggressive-cows-bad-check.toml  aggressive-cows-fixed-dist.toml  coin-change-correct-dp.toml  coin-change-greedy.toml  coin-change-multiturn-approaching.toml  coin-change-syntax-error.toml  counting-rooms-found-first-obs.toml  counting-rooms-major-rewrite.toml  counting-rooms-recursive-dfs.toml  knapsack-greedy.toml  knapsack-wrong-recurrence.toml  lis-misleading-names.toml  lis-multiturn-redirect.toml  lis-n-squared.toml  mt-coin-change-journey.toml  mt-counting-rooms-unlock.toml  mt-lis-regression.toml  mt-watermelon-stuck.toml  next-round-correct.toml  obtain-string-nested-loop.toml  obtain-string-overconfident.toml  obtain-string-velocity-drop.toml  ordered-perms-brute-force.toml  remove-letters-multiturn-found.toml  remove-letters-set-approach.toml  sliding-window-bruteforce.toml  sliding-window-values-not-indices.toml  theatre-sq-bruteforce.toml  theatre-sq-correct.toml  theatre-sq-empty.toml  (+9 more)
crates/myro-api/: Cargo.toml
crates/myro-api/src/: auth.rs  client.rs  events.rs  lib.rs  sync.rs  types.rs
crates/myro-bench/: Cargo.toml
crates/myro-bench/src/: main.rs  report.rs  runner.rs  scenario.rs  scorer.rs
crates/myro-cf/: Cargo.toml
crates/myro-cf/src/: auth.rs  client.rs  latex.rs  lib.rs  parser.rs  rate_limiter.rs  types.rs
crates/myro-coach/: Cargo.toml  README.md
crates/myro-coach/src/: config.rs  intervention.rs  lib.rs  seed.rs  types.rs
crates/myro-coach/src/llm/: mod.rs  openai_compat.rs
crates/myro-coach/src/prompt/: coaching.rs  mod.rs  schema.rs
crates/myro-predict/: Cargo.toml  PIPELINE.md  REPORT.md
crates/myro-predict/analysis/: DIVERGENCE.md  generate_plots.py
crates/myro-predict/examples/: divergence_chart.py  export_predictions.rs
crates/myro-predict/src/: cache.rs  collect.rs  history.rs  lib.rs  main.rs
crates/myro-predict/src/db/: contest_data.rs  mod.rs  model_store.rs  schema.rs
crates/myro-predict/src/model/: eval.rs  inference.rs  mod.rs  skills.rs  train.rs  types.rs
crates/myro-predict/tests/: integration_test.rs
crates/myro-tui/: Cargo.toml  README.md  build.rs
crates/myro-tui/src/: README.md  app.rs  browser.rs  config.rs  editor.rs  event.rs  lib.rs  main.rs  onboarding.rs  past_screen.rs  recommend.rs  recommender_state.rs  runner.rs  runtime.rs  settings_screen.rs  solving.rs  solving_input.rs  state.rs  test_panel.rs  testing.rs  theme.rs  updater.rs
crates/myro-tui/src/coach/: bridge.rs  ghost.rs  mod.rs  panel.rs
crates/myro-tui/src/ui/: handle_prompt.rs  home.rs  login.rs  mod.rs  overlays.rs  past.rs  settings.rs  shared.rs  solving.rs  stats.rs
crates/myro-tui/tests/: smoke.rs  solving.rs
docs/: algorithm.md  myro-predict.md  myro-web.md  skill-rating.md  ux-review-2026-03-09.md
prompts/: README.md  coaching-system.md  coaching-user.md
scripts/: fetch_cf_problems.py  install.sh  release.sh
test-problem-set/: cf-1015B.json  cf-112A.json  cf-1195C.json  cf-1285D.json  cf-1292B.json  cf-1307D.json  cf-1312C.json  cf-1333D.json  cf-1365D.json  cf-1366E.json  cf-1371E1.json  cf-1379C.json  cf-1383A.json  cf-1401D.json  cf-1416C.json  cf-1437C.json  cf-1438C.json  cf-1451C.json  cf-1461D.json  cf-1486E.json  cf-1487C.json  cf-1493D.json  cf-1511C.json  cf-1537E1.json  cf-1537E2.json  cf-1547E.json  cf-1548B.json  cf-1572A.json  cf-1574D.json  cf-1582C.json  cf-158A.json  cf-1598D.json  cf-1609C.json  cf-1619E.json  cf-1624C.json  cf-1626C.json  cf-1648A.json  cf-1661B.json  cf-1670D.json  cf-1671E.json  (+80 more)
(+186 files in other folders)
