[package]
name = "myro-api"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
