[package]
name = "myro-bench"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "myro-bench"
path = "src/main.rs"

[dependencies]
myro-coach = { path = "../myro-coach" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
