[package]
name = "myro-coach"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "myro_coach"
path = "src/lib.rs"

[dependencies]
myro-cf = { path = "../myro-cf" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
toml = "0.8"
dirs = "6"
