[package]
name = "myro-predict"
version = "0.1.2"
edition = "2021"
description = "Codeforces solve probability prediction using logistic matrix factorization"
license = "AGPL-3.0"

[lib]
name = "myro_predict"
path = "src/lib.rs"

[[bin]]
name = "myro-predict"
path = "src/main.rs"

[dependencies]
myro-cf = { path = "../myro-cf" }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rayon = "1"
bincode = "1"
flate2 = "1"
anyhow = "1"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
